# moose-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: api.rs  main.rs  menu.rs  player.rs  scrape.rs
