[package]
name = "moose-cli"
version = "0.1.2"
edition = "2021"
description = "CLI för SVT Plays livesändning av Den stora älgvandringen."
license = "MIT"
repository = "https://github.com/uherman/moose-cli"
readme = "README.md"
authors = ["uherman"]
keywords = ["svt", "algvandringen", "mpv", "hls", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
